tests/negative/maps/float_key/input.ci
void main() {
    int[float] m = [];
}
